# FacialDecoration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  install_dependency.sh  mythread.cpp  mythread.h  run_application.sh
.github/workflows/: cmake.yml  compileTest.yml  releaseSA.yml
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  face_detect.cpp  face_detect.h  global_variable.h  img_process.cpp  img_proecss.cpp  main.cpp  main.cpp~Stashed changes  main.cpp~Updated upstream  opencv410.props
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc143.idb
ImageProcess/: CppThread.h  MyThread.cpp  MyThread.h  cascade.cpp  cascade.h  face_detect.cpp  face_detect.h  filter_process.cpp  filter_process.h  global_variable.h  img_process.cpp  mythread.cpp  mythread.h
QtApplication/: main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.ui
UnitTest/: test_function.cpp
assets/: stylesheet.qss
test_demos/: test_function.cpp  video_stream_demo.cpp  video_stream_demo.h
